c/engine.h


typedef struct LiteRtLmEngine LiteRtLmEngine;
typedef struct LiteRtLmSession LiteRtLmSession;
typedef struct LiteRtLmResponses LiteRtLmResponses;
typedef struct LiteRtLmEngineSettings LiteRtLmEngineSettings;
typedef struct LiteRtLmRepetitionPenaltyConfig LiteRtLmRepetitionPenaltyConfig;
typedef struct LiteRtLmThinkingConfig LiteRtLmThinkingConfig;
typedef struct LiteRtLmInputData LiteRtLmInputData;
typedef struct LiteRtLmSessionConfig LiteRtLmSessionConfig;
typedef struct LiteRtLmConversationConfig LiteRtLmConversationConfig;
typedef enum {
  kLiteRtLmSamplerTypeTopK = 1,
  kLiteRtLmSamplerTypeTopP = 2,
  kLiteRtLmSamplerTypeGreedy = 3,
} LiteRtLmSamplerType;
typedef struct LiteRtLmSamplerParams LiteRtLmSamplerParams;
LITERT_LM_C_API_EXPORT
LiteRtLmSamplerParams* litert_lm_sampler_params_create(
    LiteRtLmSamplerType type);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_delete(LiteRtLmSamplerParams* params);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_top_k(LiteRtLmSamplerParams* params,
                                        int32_t top_k);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_top_p(LiteRtLmSamplerParams* params,
                                        float top_p);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_temperature(LiteRtLmSamplerParams* params,
                                              float temperature);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_seed(LiteRtLmSamplerParams* params,
                                       int32_t seed);
typedef enum {
  kLiteRtLmConstraintTypeNone = 0,
  kLiteRtLmConstraintTypeRegex = 1,
  kLiteRtLmConstraintTypeJsonSchema = 2,
} LiteRtLmConstraintType;
typedef enum {
  kLiteRtLmConstraintProviderTypeLlGuidance = 1,
} LiteRtLmConstraintProviderType;
LITERT_LM_C_API_EXPORT
LiteRtLmSessionConfig* litert_lm_session_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_max_output_tokens(
    LiteRtLmSessionConfig* config, int max_output_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_apply_prompt_template(
    LiteRtLmSessionConfig* config, bool apply_prompt_template);
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_sampler_params(
    LiteRtLmSessionConfig* config, const LiteRtLmSamplerParams* sampler_params);
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_delete(LiteRtLmSessionConfig* config);
LITERT_LM_C_API_EXPORT
int litert_lm_session_config_set_lora_path(LiteRtLmSessionConfig* config,
                                           const char* lora_path);
LITERT_LM_C_API_EXPORT
int litert_lm_session_config_set_audio_lora_path(LiteRtLmSessionConfig* config,
                                                 const char* audio_lora_path);
LITERT_LM_C_API_EXPORT
LiteRtLmConversationConfig* litert_lm_conversation_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_session_config(
    LiteRtLmConversationConfig* config,
    const LiteRtLmSessionConfig* session_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_system_message(
    LiteRtLmConversationConfig* config, const char* system_message_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_tools(LiteRtLmConversationConfig* config,
                                             const char* tools_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_messages(
    LiteRtLmConversationConfig* config, const char* messages_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_extra_context(
    LiteRtLmConversationConfig* config, const char* extra_context_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_prompt_template(
    LiteRtLmConversationConfig* config, const char* prompt_template);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_enable_constrained_decoding(
    LiteRtLmConversationConfig* config, bool enable_constrained_decoding);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_constraint_provider(
    LiteRtLmConversationConfig* config,
    const LiteRtLmConstraintProviderType* provider_type);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_filter_channel_content_from_kv_cache(
    LiteRtLmConversationConfig* config,
    bool filter_channel_content_from_kv_cache);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_thinking_config(
    LiteRtLmConversationConfig* config,
    const LiteRtLmThinkingConfig* thinking_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_delete(LiteRtLmConversationConfig* config);
LITERT_LM_C_API_EXPORT
LiteRtLmRepetitionPenaltyConfig* litert_lm_repetition_penalty_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_delete(
    LiteRtLmRepetitionPenaltyConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_repetition_penalty(
    LiteRtLmRepetitionPenaltyConfig* config, float repetition_penalty);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_presence_penalty(
    LiteRtLmRepetitionPenaltyConfig* config, float presence_penalty);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_frequency_penalty(
    LiteRtLmRepetitionPenaltyConfig* config, float frequency_penalty);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_window_size(
    LiteRtLmRepetitionPenaltyConfig* config, int window_size);
typedef enum {
  kLiteRtLmLogSeverityVerbose = 0,
  kLiteRtLmLogSeverityDebug = 1,
  kLiteRtLmLogSeverityInfo = 2,
  kLiteRtLmLogSeverityWarning = 3,
  kLiteRtLmLogSeverityError = 4,
  kLiteRtLmLogSeverityFatal = 5,
  kLiteRtLmLogSeveritySilent = 1000,
} LiteRtLmLogSeverity;
LITERT_LM_C_API_EXPORT
void litert_lm_set_min_log_level(LiteRtLmLogSeverity level);
typedef enum {
  kLiteRtLmInputDataTypeText,
  kLiteRtLmInputDataTypeImage,
  kLiteRtLmInputDataTypeImageEnd,
  kLiteRtLmInputDataTypeAudio,
  kLiteRtLmInputDataTypeAudioEnd,
} LiteRtLmInputDataType;
LITERT_LM_C_API_EXPORT
LiteRtLmInputData* litert_lm_input_data_create(LiteRtLmInputDataType type,
                                               const void* data, size_t size);
LITERT_LM_C_API_EXPORT
void litert_lm_input_data_delete(LiteRtLmInputData* input_data);
LITERT_LM_C_API_EXPORT
LiteRtLmEngineSettings* litert_lm_engine_settings_create(
    const char* model_path, const char* backend_str,
    const char* vision_backend_str, const char* audio_backend_str);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_delete(LiteRtLmEngineSettings* settings);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_max_num_tokens(
    LiteRtLmEngineSettings* settings, int max_num_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_num_threads(LiteRtLmEngineSettings* settings,
                                               int num_threads);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_audio_num_threads(
    LiteRtLmEngineSettings* settings, int num_threads);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_max_num_images(
    LiteRtLmEngineSettings* settings, int max_num_images);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_cache_dir(LiteRtLmEngineSettings* settings,
                                             const char* cache_dir);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_litert_dispatch_lib_dir(
    LiteRtLmEngineSettings* settings, const char* lib_dir);
typedef enum {
  kLiteRtLmActivationDataTypeFloat32 = 0,
  kLiteRtLmActivationDataTypeFloat16 = 1,
  kLiteRtLmActivationDataTypeInt16 = 2,
  kLiteRtLmActivationDataTypeInt8 = 3,
} LiteRtLmActivationDataType;
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_activation_data_type(
    LiteRtLmEngineSettings* settings,
    LiteRtLmActivationDataType activation_data_type);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_enable_benchmark(
    LiteRtLmEngineSettings* settings);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_num_prefill_tokens(
    LiteRtLmEngineSettings* settings, int num_prefill_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_num_decode_tokens(
    LiteRtLmEngineSettings* settings, int num_decode_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_enable_speculative_decoding(
    LiteRtLmEngineSettings* settings, bool enable_speculative_decoding);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_use_ringbuffers_local_attention(
    LiteRtLmEngineSettings* settings, bool use_ringbuffers_local_attention);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_lora_rank(LiteRtLmEngineSettings* settings,
                                             int lora_rank);
LITERT_LM_C_API_EXPORT
int litert_lm_engine_settings_set_supported_lora_ranks(
    LiteRtLmEngineSettings* settings, const int* lora_ranks, size_t num_ranks);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_audio_lora_rank(
    LiteRtLmEngineSettings* settings, int lora_rank);
LITERT_LM_C_API_EXPORT
int litert_lm_engine_settings_set_supported_audio_lora_ranks(
    LiteRtLmEngineSettings* settings, const int* lora_ranks, size_t num_ranks);
LITERT_LM_C_API_EXPORT
LiteRtLmEngine* litert_lm_engine_create(const LiteRtLmEngineSettings* settings);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_delete(LiteRtLmEngine* engine);
LITERT_LM_C_API_EXPORT
LiteRtLmSession* litert_lm_engine_create_session(LiteRtLmEngine* engine,
                                                 LiteRtLmSessionConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_session_delete(LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
void litert_lm_session_cancel_process(LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
int litert_lm_session_run_prefill(LiteRtLmSession* session,
                                  const LiteRtLmInputData* const* inputs,
                                  size_t num_inputs);
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_run_decode(LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_run_text_scoring(LiteRtLmSession* session,
                                                      const char** target_text,
                                                      size_t num_targets,
                                                      bool store_token_lengths);
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_generate_content(
    LiteRtLmSession* session, const LiteRtLmInputData* const* inputs,
    size_t num_inputs);
typedef struct LiteRtLmStreamChunk LiteRtLmStreamChunk;
typedef void (*LiteRtLmStreamCallback)(void* callback_data,
                                       const LiteRtLmStreamChunk* chunk);
LITERT_LM_C_API_EXPORT
int litert_lm_session_run_decode_async(LiteRtLmSession* session,
                                       LiteRtLmStreamCallback callback,
                                       void* callback_data);
LITERT_LM_C_API_EXPORT
int litert_lm_session_generate_content_stream(
    LiteRtLmSession* session, const LiteRtLmInputData* const* inputs,
    size_t num_inputs, LiteRtLmStreamCallback callback, void* callback_data);